--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -35,7 +35,7 @@
 
 .featured_categories
   +pie-clearfix
-  margin: 0 -10px 10px
+  margin: 0 -10px 0
   
   li
     float: left
